<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".presentation.auth.sign_in.SignInScreen">

    <!--ToolBar-->
    <include
        android:id="@+id/include"
        layout="@layout/my_toolbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="40dp"
        android:paddingRight="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/sign_in"
            android:textColor="@color/text_color"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittext_box"
            android:fontFamily="@font/roboto"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            android:textSize="16sp"
            android:textColorHint="@color/hint_color"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:ignore="RtlSymmetry"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/emailHelperTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:paddingStart="15dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/negative"
            android:textSize="13sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@+id/etEmail"
            app:layout_constraintTop_toBottomOf="@+id/etEmail"
            tools:text="Enter your email" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittext_box"
            android:fontFamily="@font/roboto"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:longClickable="false"
            android:paddingStart="16dp"
            android:paddingEnd="15dp"
            android:textSize="16sp"
            android:textColorHint="@color/hint_color"
            app:layout_constraintEnd_toEndOf="@+id/emailHelperTV"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/emailHelperTV"
            app:layout_constraintTop_toBottomOf="@+id/emailHelperTV"
            app:layout_goneMarginTop="20dp" />

        <ImageView
            android:id="@+id/passwordToggle"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/etPassword"
            app:layout_constraintEnd_toEndOf="@+id/etPassword"
            app:layout_constraintTop_toTopOf="@+id/etPassword"
            android:paddingHorizontal="10dp"
            app:srcCompat="@drawable/visibility_on" />

        <TextView
            android:id="@+id/passwordHelperTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:paddingStart="15dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/negative"
            android:textSize="13sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@+id/etPassword"
            app:layout_constraintTop_toBottomOf="@+id/etPassword"
            tools:text="Enter your password" />

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:paddingHorizontal="15dp"
            android:paddingVertical="10dp"
            android:text="@string/forgot_password"
            android:textColor="@color/neutral"
            android:textSize="16sp"
            app:layout_goneMarginTop="10dp"
            app:layout_constraintEnd_toEndOf="@+id/etPassword"
            app:layout_constraintTop_toBottomOf="@+id/passwordHelperTV"
            tools:ignore="RtlSymmetry" />

        <include
            android:id="@+id/btnLogIn"
            layout="@layout/primary_progress_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/forgotPassword"
            tools:layout_editor_absoluteX="16dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="@+id/btnLogIn"
            app:layout_constraintStart_toStartOf="@+id/btnLogIn"
            app:layout_constraintTop_toBottomOf="@+id/btnLogIn">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/text_color"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/createAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:paddingHorizontal="15dp"
                android:paddingVertical="5dp"
                android:text="@string/create"
                android:textColor="@color/neutral"
                android:textSize="16sp" />

        </LinearLayout>

        <!--        <ImageView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginBottom="30dp"-->
<!--            android:visibility="gone"-->
<!--            android:background="@drawable/divider_or" />-->

<!--        <ImageView-->
<!--            android:id="@+id/signInWithGoogle"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="55dp"-->
<!--            android:layout_marginBottom="48dp"-->
<!--            android:src="@drawable/loginbtngoogle"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            android:visibility="gone"-->
<!--            tools:layout_editor_absoluteX="16dp" />-->

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/progress_animation"
        layout="@layout/progress_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>